--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ default = ["gzip", "brotli"]
 brotli = ["brotli2"]
 gzip = ["deflate"]
 ssl = ["tiny_http/ssl"]
+usnet = ["tiny_http/usnet", "usnet_sockets"]
+netmap = ["usnet_sockets/netmap", "tiny_http/netmap"]
 
 [dependencies]
 base64 = "0.9.0"
@@ -34,6 +36,10 @@ tiny_http = "0.6.0"
 url = "1.2"
 threadpool = "1"
 num_cpus = "1"
+usnet_sockets = { git = "https://github.com/ANLAB-KAIST/usnet_sockets", optional = true }
+
+[patch.crates-io]
+tiny_http = { git = "https://github.com/pothos/tiny-http", branch = "usnet" }
 
 [dev-dependencies]
 postgres = { version = "0.15.2", default-features = false }
